# plexus-core

./: CHANGELOG.md  Cargo.toml  HASH_SYSTEM_V2.md  README.md
docs/: DISCOVERY.md
docs/architecture/: 16673909740276808511_synapse-client-layer.md  16673909740277808511_advanced-patterns.md  16673909740278808511_schema-system.md  16673909740279808511_streaming-architecture.md  16673909740280808511_server-setup-and-transport.md  16673909740281808511_dynamichub-routing.md  16673909740282808511_activation-trait-and-macros.md  16673909740283808511_plexus-rpc-overview.md  16673911468976972543_implementing-plexus-microservices.md  16677411944303605503_plexus-to-dynamichub-rename.md  16678055419356580607_plexus-hooks.md  16679517135570018559_multi-hub-transport-envelope.md  16679660437204694527_hub-derive-experiments-comparison.md  16679663515170235647_hub-derive-cllient-integration.md  16679674779018260735_hub-core-library.md
examples/: discover.sh
src/: builder.rs  lib.rs  mcp_bridge.rs  serde_helpers.rs  types.rs
src/activations/: mod.rs
src/activations/echo/: activation.rs
src/plexus/: context.rs  dispatch.rs  errors.rs  hub_context.rs  mod.rs  plexus.rs  schema.rs  streaming.rs  types.rs
src/plexus/bidirectional/: channel.rs  helpers.rs  mod.rs  registry.rs  types.rs
tests/: bidirectional_unit.rs
